--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -583,12 +583,37 @@ header {
 		opacity: .8;
 	}
 
-	svg {
-		width: 60px;
-	    position: fixed;
+	.contents {
+		position: fixed;
 	    top: 50%;
 	    left: 50%;
 	    @include transformGeneral(translateX(-50%) translateY(-50%));
+
+	    svg {
+			width: 60px;
+			height: auto;
+		}
+
+		.text {
+			height: 20px;
+			width: 80px;
+			text-align: center;
+			position: relative;
+			overflow: hidden;
+			margin: 10px auto;
+
+			p {
+				font-size: 14px;
+				padding: 0;
+				margin: 0;
+				position: absolute;
+	    		top: 50%;
+	    		color: $btn-text;
+	    		opacity: 0;
+	    		@include transformGeneral(translateY(-50%) translate3d(0, 30px, 0));
+			}
+		}
+
 	}
 }
 
@@ -702,9 +727,45 @@ footer {
 	@include animationFunc( colorSwapToDarkGreen, .5s, infinite );
 }
 
+.loading-text {
+	@include animationFunc( loadingText, 1.2s, infinite );
+	-webkit-animation-timing-function: cubic-bezier(.17,.67,.83,.67);
+	-moz-animation-timing-function: cubic-bezier(.17,.67,.83,.67);
+	-o-animation-timing-function: cubic-bezier(.17,.67,.83,.67);
+	animation-timing-function: cubic-bezier(.17,.67,.83,.67);
+}
+
 
 
 /* KEY FRAMES */
+
+@keyframes loadingText {
+    0% {
+    	opacity: 0;
+		transform: translateY(-50%) translate3d(0, 30px, 0);
+    }
+    25% {
+    	opacity: .9;
+    	transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+    50% {
+    	opacity: .9;
+    	transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+    75% {
+    	opacity: .5;
+    	transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+
+    99% {
+    	opacity: 0;
+		transform: translateY(-50%) translate3d(0, -30px, 0);
+    }
+    100% {
+    	opacity: 0;
+		transform: translateY(-50%) translate3d(0, 30px, 0);
+    }
+}
 
 @keyframes liButtonClick {
     0% {
