--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -9379,8 +9379,7 @@ header {
   opacity: .8;
 }
 /* line 586, ../sass/app.scss */
-.loading-screen svg {
-  width: 60px;
+.loading-screen .contents {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -9390,8 +9389,37 @@ header {
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
+/* line 592, ../sass/app.scss */
+.loading-screen .contents svg {
+  width: 60px;
+  height: auto;
+}
+/* line 597, ../sass/app.scss */
+.loading-screen .contents .text {
+  height: 20px;
+  width: 80px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  margin: 10px auto;
+}
+/* line 605, ../sass/app.scss */
+.loading-screen .contents .text p {
+  font-size: 14px;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  color: #524231;
+  opacity: 0;
+  -webkit-transform: translateY(-50%) translate3d(0, 30px, 0);
+  -moz-transform: translateY(-50%) translate3d(0, 30px, 0);
+  -ms-transform: translateY(-50%) translate3d(0, 30px, 0);
+  -o-transform: translateY(-50%) translate3d(0, 30px, 0);
+  transform: translateY(-50%) translate3d(0, 30px, 0);
+}
 
-/* line 595, ../sass/app.scss */
+/* line 620, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9399,7 +9427,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 607, ../sass/app.scss */
+/* line 632, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9409,7 +9437,7 @@ footer {
   opacity: 0;
 }
 
-/* line 612, ../sass/app.scss */
+/* line 637, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9419,17 +9447,17 @@ footer {
   opacity: 1;
 }
 
-/* line 617, ../sass/app.scss */
+/* line 642, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 621, ../sass/app.scss */
+/* line 646, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 625, ../sass/app.scss */
+/* line 650, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9440,7 +9468,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 631, ../sass/app.scss */
+/* line 656, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9452,7 +9480,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 643, ../sass/app.scss */
+/* line 668, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.8s forwards;
   -moz-animation: zoomAni 0.8s forwards;
@@ -9461,7 +9489,7 @@ footer {
   animation: zoomAni 0.8s forwards;
 }
 
-/* line 647, ../sass/app.scss */
+/* line 672, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9470,7 +9498,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 651, ../sass/app.scss */
+/* line 676, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9479,7 +9507,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 655, ../sass/app.scss */
+/* line 680, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9488,7 +9516,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 659, ../sass/app.scss */
+/* line 684, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9497,7 +9525,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 663, ../sass/app.scss */
+/* line 688, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9510,7 +9538,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 671, ../sass/app.scss */
+/* line 696, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 1s forwards;
   -moz-animation: fadeInAndUp 1s forwards;
@@ -9519,7 +9547,7 @@ footer {
   animation: fadeInAndUp 1s forwards;
 }
 
-/* line 675, ../sass/app.scss */
+/* line 700, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9532,7 +9560,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 683, ../sass/app.scss */
+/* line 708, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 1s forwards;
   -moz-animation: liButtonClickText 1s forwards;
@@ -9549,7 +9577,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 695, ../sass/app.scss */
+/* line 720, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9559,7 +9587,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 700, ../sass/app.scss */
+/* line 725, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9569,7 +9597,46 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
+/* line 730, ../sass/app.scss */
+.loading-text {
+  -webkit-animation: loadingText 1.2s infinite;
+  -moz-animation: loadingText 1.2s infinite;
+  -ms-animation: loadingText 1.2s infinite;
+  -o-animation: loadingText 1.2s infinite;
+  animation: loadingText 1.2s infinite;
+  -webkit-animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  -moz-animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  -o-animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
 /* KEY FRAMES */
+@keyframes loadingText {
+  0% {
+    opacity: 0;
+    transform: translateY(-50%) translate3d(0, 30px, 0);
+  }
+  25% {
+    opacity: .9;
+    transform: translateY(-50%) translate3d(0, 0, 0);
+  }
+  50% {
+    opacity: .9;
+    transform: translateY(-50%) translate3d(0, 0, 0);
+  }
+  75% {
+    opacity: .5;
+    transform: translateY(-50%) translate3d(0, 0, 0);
+  }
+  99% {
+    opacity: 0;
+    transform: translateY(-50%) translate3d(0, -30px, 0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-50%) translate3d(0, 30px, 0);
+  }
+}
 @keyframes liButtonClick {
   0% {
     transform: scale3d(1, 1, 1);
