--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -767,6 +767,90 @@ footer {
     }
 }
 
+@-webkit-keyframes loadingText {
+    0% {
+    	opacity: 0;
+		-webkit-transform: translateY(-50%) translate3d(0, 30px, 0);
+    }
+    25% {
+    	opacity: .9;
+    	-webkit-transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+    50% {
+    	opacity: .9;
+    	-webkit-transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+    75% {
+    	opacity: .5;
+    	-webkit-transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+
+    99% {
+    	opacity: 0;
+		-webkit-transform: translateY(-50%) translate3d(0, -30px, 0);
+    }
+    100% {
+    	opacity: 0;
+		-webkit-transform: translateY(-50%) translate3d(0, 30px, 0);
+    }
+}
+
+@-moz-keyframes loadingText {
+    0% {
+    	opacity: 0;
+		-moz-transform: translateY(-50%) translate3d(0, 30px, 0);
+    }
+    25% {
+    	opacity: .9;
+    	-moz-transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+    50% {
+    	opacity: .9;
+    	-moz-transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+    75% {
+    	opacity: .5;
+    	-moz-transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+
+    99% {
+    	opacity: 0;
+		-moz-transform: translateY(-50%) translate3d(0, -30px, 0);
+    }
+    100% {
+    	opacity: 0;
+		-moz-transform: translateY(-50%) translate3d(0, 30px, 0);
+    }
+}
+
+@-o-keyframes loadingText {
+    0% {
+    	opacity: 0;
+		-o-transform: translateY(-50%) translate3d(0, 30px, 0);
+    }
+    25% {
+    	opacity: .9;
+    	-o-transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+    50% {
+    	opacity: .9;
+    	-o-transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+    75% {
+    	opacity: .5;
+    	-o-transform: translateY(-50%) translate3d(0, 0, 0);
+    }
+
+    99% {
+    	opacity: 0;
+		-o-transform: translateY(-50%) translate3d(0, -30px, 0);
+    }
+    100% {
+    	opacity: 0;
+		-o-transform: translateY(-50%) translate3d(0, 30px, 0);
+    }
+}
+
 @keyframes liButtonClick {
     0% {
 		transform: scale3d(1,1,1);
